fix container spacing

--- a/assets/scss/layout/_layout.scss
+++ b/assets/scss/layout/_layout.scss
@@ -239,3 +239,8 @@
     }
 }
 
+.section-spacing {
+    padding:80px 0;
+}
+
+
